--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -934,52 +934,78 @@ Autodetect indentation:
 
 #+RESULTS:
 : t
-*** GitHub integration
-**** Open GitHub from Helm
-#+BEGIN_SRC emacs-lisp 
-
-;;(use-package helm-open-github
-;;  :ensure t)
-
-#+END_SRC
-
 *** Open GitHub from file
 
 #+BEGIN_SRC emacs-lisp
-    (defun helm-open-github--command-one-line (cmd args)
-      (with-temp-buffer
-        (when (zerop (apply 'call-process cmd nil t nil args))
-          (goto-char (point-min))
-          (buffer-substring-no-properties
-           (line-beginning-position) (line-end-position)))))
+  (defun parse-host-path-syntax (host-path-string)
+    (let ((ssh-host-path-regex "\\(.*\\)\@\\(.*\\):\\(.*\\)"))
+      (string-match ssh-host-path-regex host-path-string)
+      (let ((user (match-string 1 host-path-string))
+            (host (match-string 2 host-path-string))
+            (path (match-string 3 host-path-string)))
+        `((user . ,user)
+          (host . ,host)
+          (path . ,path)))))
 
-    (defun helm-open-github--branch ()
-     (let ((branch (helm-open-github--command-one-line "git" '("symbolic-ref" "HEAD"))))
-       (if (not branch)
-           (error "Failed: 'git symbolic-ref HEAD'")
-         (replace-regexp-in-string "\\`refs/heads/" "" branch))))
+  (defun strip-dot-git (str)
+    (replace-regexp-in-string "\.git$" "" str))
 
-    (defun helm-open-github--highlight-marker (start end)
-      (cond ((and start end (region-active-p))
-             (format "#L%s..L%s" start end))
-            (start
-             (format "#L%s" start))
-            (t "")))
+  (defun valid-url? (str)
+    (url-host (url-generic-parse-url str)))
 
-    (require 'subr-x)
+  (defun parse-url (str)
+    (let ((url-obj (url-generic-parse-url str)))
+      `((user . ,(url-user url-obj))
+        (host . ,(url-host url-obj))
+        (path . ,(url-filename url-obj)))))
 
-    (defun github-file-url ()
-      (let* ((branch (helm-open-github--branch))
-             (current-file (buffer-file-name))
-             (root (vc-git-root current-file))
-             (repo-path (file-relative-name current-file root))
-             (base-url (string-trim (car (split-string
-                                          (shell-command-to-string "hub browse -u")
-                                          "tree"))))
-             (start-line (line-number-at-pos (if (region-active-p) (region-beginning) (point))))
-             (end-line (line-number-at-pos (region-end)))
-             (marker (helm-open-github--highlight-marker start-line end-line)))
-        (format "%s/blob/%s/%s%s" base-url branch repo-path marker)))
+  (defun infer-https-url (str)
+    (let* ((parsed-host-path (if (valid-url? str)
+                                 (parse-url str)
+                                 (parse-host-path-syntax str)))
+          (host (alist-get 'host parsed-host-path))
+          (path (alist-get 'path parsed-host-path)))
+      (concat "https://" host "/" (strip-dot-git path))))
+
+  (defun get-remote-url (remote)
+    (helm-open-github--command-one-line "git" `("remote" "get-url" ,remote)))
+    
+  (defun infer-browse-url-from-remote (remote)
+    (let ((origin-url (get-remote-url remote)))
+      (infer-https-url origin-url)))
+
+  (defun helm-open-github--command-one-line (cmd args)
+    (with-temp-buffer
+      (when (zerop (apply 'call-process cmd nil t nil args))
+        (goto-char (point-min))
+        (buffer-substring-no-properties
+         (line-beginning-position) (line-end-position)))))
+
+  (defun helm-open-github--branch ()
+    (let ((branch (helm-open-github--command-one-line "git" '("symbolic-ref" "HEAD"))))
+      (if (not branch)
+          (error "Failed: 'git symbolic-ref HEAD'")
+        (replace-regexp-in-string "\\`refs/heads/" "" branch))))
+
+  (defun helm-open-github--highlight-marker (start end)
+    (cond ((and start end (region-active-p))
+           (format "#L%s..L%s" start end))
+          (start
+           (format "#L%s" start))
+          (t "")))
+
+  (require 'subr-x)
+
+  (defun github-file-url ()
+    (let* ((branch (helm-open-github--branch))
+           (current-file (buffer-file-name))
+           (root (vc-git-root current-file))
+           (repo-path (file-relative-name current-file root))
+           (base-url (infer-browse-url-from-remote "origin"))
+           (start-line (line-number-at-pos (if (region-active-p) (region-beginning) (point))))
+           (end-line (line-number-at-pos (region-end)))
+           (marker (helm-open-github--highlight-marker start-line end-line)))
+      (format "%s/blob/%s/%s%s" base-url branch repo-path marker)))
 
   (defun github-url-save ()
     (interactive)
@@ -999,10 +1025,11 @@ Autodetect indentation:
            (repo-path (file-relative-name current-file root))
            (github-link (github-file-url)))
       (add-to-list 'org-stored-links (list github-link repo-path))))
-
-
-
 #+END_SRC
+
+#+RESULTS:
+: org-store-github-link
+
 ** Snippets
 
 #+BEGIN_SRC emacs-lisp 
