--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -1652,6 +1652,7 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
 #+BEGIN_SRC emacs-lisp 
 
   (defun my/configure-org ()
+    (require 'org-tempo)
     (setq org-image-actual-width 300)
     (setq org-src-fontify-natively t)
     (setq org-log-done 'time)
