--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -436,7 +436,7 @@ It's commented out right now because it looks terrible.
 
 ** Window / popup management
 
-Always focus the cursor in help windows.
+Always focus the curor in help windows.
 
 #+BEGIN_SRC emacs-lisp
   (setq help-window-select t)
@@ -473,6 +473,7 @@ Make scrolling behavior more like vim:
     (global-set-key (kbd "C-x b") 'helm-mini)
     (global-set-key (kbd "C-h a") 'helm-apropos)
     (setq helm-buffer-max-length nil)
+    (add-to-list 'completion-styles 'helm)
     (helm-autoresize-mode t)
 
     (require 'helm-imenu))
@@ -666,6 +667,7 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
                         "" '(:ignore t :which-key "files")
                         "f" 'helm-find-files
                         "d" 'delete-this-file
+                        "c" 'xah-copy-file-path
                         "s" 'save-buffer)
 
     ;; Use go-specific jumping for go-mode since it works wells
@@ -961,7 +963,6 @@ Version 2017-01-27"
         (perfect-margin-mode)
         (visual-line-mode)
         (flyspell-mode))))
-
 #+END_SRC
 
 #+RESULTS:
@@ -994,11 +995,10 @@ Autodetect indentation:
 ** Autocomplete
 
 #+BEGIN_SRC emacs-lisp 
-
   (use-package company
     :ensure t
     :config
-    (setq company-idle-delay 0)
+    (setq company-idle-delay 0) 
     (setq company-minimum-prefix-length 1)
     (global-company-mode)
     (define-key company-active-map (kbd "M-n") nil)
@@ -1013,7 +1013,6 @@ Autodetect indentation:
 ** Git
 *** Magit
 #+BEGIN_SRC emacs-lisp 
-
   (use-package magit
     :ensure t
     :config
@@ -1021,7 +1020,6 @@ Autodetect indentation:
     ;; (setq magit-refresh-status-buffer nil)
     ;; (setq magit-refresh-verbose t)
     )
-
 #+END_SRC
 
 #+RESULTS:
@@ -1125,7 +1123,6 @@ Autodetect indentation:
 ** Snippets
 
 #+BEGIN_SRC emacs-lisp 
-
 (use-package yasnippet
   :ensure t
   :config
@@ -1142,14 +1139,11 @@ Autodetect indentation:
               (define-key yas/keymap [tab] 'yas/next-field)))
 
   (yas-global-mode 1))
-
-
 #+END_SRC
 
 ** Lisp
 
 #+BEGIN_SRC emacs-lisp 
-
   (defun start-figwheel ()
     "Start figwheel. This function is meant to be called interactively after `cider-jack-in`."
     (interactive)
@@ -1207,7 +1201,6 @@ Autodetect indentation:
   (defun my/clojure-mode-hook ()
     (clj-refactor-mode 1)
     (yas-minor-mode 1))
-
 #+END_SRC
 
 #+RESULTS:
@@ -1355,9 +1348,7 @@ I typically use 2 spaces to indent.
 
   (use-package docker
     :ensure t
-    :diminish docker-mode
-    :config
-    (docker-global-mode))
+    :diminish docker-mode)
 
 #+END_SRC
 
@@ -1421,14 +1412,14 @@ Let's use web-mode, which supports font locking for templating.
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
-  (use-package phpunit
-    :load-path "~/.emacs.d/site-lisp/phpunit"
-    :config
-      (general-define-key
-       :states '(normal)
-       :keymaps 'php-mode-map
-       :prefix "C-c"
-       "C-t" 'phpunit-current-test))
+  ;; (use-package phpunit
+  ;;   :load-path "~/.emacs.d/site-lisp/phpunit"
+  ;;   :config
+  ;;     (general-define-key
+  ;;      :states '(normal)
+  ;;      :keymaps 'php-mode-map
+  ;;      :prefix "C-c"
+  ;;      "C-t" 'phpunit-current-test))
 #+END_SRC
 ** LaTeX
 
@@ -2192,13 +2183,15 @@ This is long so that fetching feeds does not timeout.
 : t
 * Budgeting
 
+Not actively using this right now.
+
 #+BEGIN_SRC emacs-lisp
   (use-package ledger-mode
     :ensure t)
 #+END_SRC
 
 #+RESULTS:
-* External services (prodigy)
+* External services (Prodigy)
 
 #+BEGIN_SRC emacs-lisp
   (use-package prodigy
