--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -474,6 +474,8 @@ Make scrolling behavior more like vim:
     (global-set-key (kbd "C-h a") 'helm-apropos)
     (setq helm-buffer-max-length nil)
     (helm-autoresize-mode t)
+    (customize-set-variable helm-completion-style 'helm)
+    (add-to-list 'completion-styles 'helm)
 
     (require 'helm-imenu))
 
@@ -667,6 +669,10 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
                         "f" 'helm-find-files
                         "d" 'delete-this-file
                         "s" 'save-buffer)
+
+    ;; JavaScript
+    (general-define-key :keymaps '(typescript-mode-map javascript-mode-map)
+                        "gf" 'lsp-find-definition)
 
     ;; Use go-specific jumping for go-mode since it works wells
     (general-define-key :keymaps 'go-mode-map
@@ -1541,34 +1547,44 @@ Let's use web-mode, which supports font locking for templating.
 
 ** LSP
 #+begin_src emacs-lisp
-      (use-package lsp-mode
-        :ensure t
-        :commands (lsp lsp-deferred)
-        :hook (go-mode . lsp-deferred)
-        :config
-        (require 'lsp-clients)
-        (require 'lsp-go))
+  (use-package lsp-mode
+    :ensure t
+    :commands (lsp lsp-deferred)
+    :hook ((go-mode . lsp-deferred)
+           (typescript-mode . lsp-deferred))
+    :config
+    (require 'lsp-clients)
+    (require 'lsp-go)
+    (require 'lsp-solargraph)
+    (customize-set-variable 'lsp-solargraph-use-bundler t)
 
-      (defun lsp-go-install-save-hooks ()
-        (add-hook 'before-save-hook #'lsp-format-buffer t t)
-        (add-hook 'before-save-hook #'lsp-organize-imports t t))
+    (setq lsp-clients-typescript-server-args '("--stdio")))
 
-      (use-package lsp-ui
-        :ensure t
-        :commands lsp-ui-mode)
+  (defun lsp-go-install-save-hooks ()
+    (add-hook 'before-save-hook #'lsp-format-buffer t t)
+    (add-hook 'before-save-hook #'lsp-organize-imports t t))
 
-      (use-package company-lsp
-        :ensure t
-        :commands company-lsp)
+  (use-package lsp-ui
+    :ensure t
+    :commands lsp-ui-mode)
 
-      (use-package yasnippet
-        :ensure t
-        :commands yas-minor-mode
-        :hook (go-mode . yas-minor-mode))
+  (use-package company-lsp
+    :ensure t
+    :commands company-lsp)
+
+  (use-package yasnippet
+    :ensure t
+    :commands yas-minor-mode
+    :hook (go-mode . yas-minor-mode))
+
+  (setq gc-cons-threshold 100000000)
+  (setq read-process-output-max (* 1024 1024))
+  (setq lsp-prefer-capf t)
+
 #+end_src
 
 #+RESULTS:
-| yas-minor-mode | lsp-deferred | lsp-go-install-save-hooks |
+: t
 
 * Org Mode
 I use Org Mode to take notes for work and personal.
@@ -1653,34 +1669,36 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
 *** Putting it together
 #+BEGIN_SRC emacs-lisp 
 
-  (defun my/configure-org ()
-    (require 'org-tempo)
-    (setq org-image-actual-width 300)
-    (setq org-src-fontify-natively t)
-    (setq org-log-done 'time)
+    (defun my/configure-org ()
+      (require 'org-tempo)
+      (setq org-image-actual-width 300)
+      (setq org-src-fontify-natively t)
+      (setq org-log-done 'time)
+    
+      (setq org-src-window-setup ‘current-window)
 
-    (setq org-startup-truncated 'nil)
-    (setq org-catch-invisible-edits 'smart)
+      (setq org-startup-truncated 'nil)
+      (setq org-catch-invisible-edits 'smart)
 
-    ;; Do not dim blocked tasks
-    (setq org-agenda-dim-blocked-tasks nil)
+      ;; Do not dim blocked tasks
+      (setq org-agenda-dim-blocked-tasks nil)
 
-    ;; Start up in org-indent-mode
-    (setq org-startup-indented t)
-    ;; Diminish org-indent-mode in the mode-line
-    (eval-after-load 'org-indent '(diminish 'org-indent-mode))
-    (setq org-hide-emphasis-markers t))
+      ;; Start up in org-indent-mode
+      (setq org-startup-indented t)
+      ;; Diminish org-indent-mode in the mode-line
+      (eval-after-load 'org-indent '(diminish 'org-indent-mode))
+      (setq org-hide-emphasis-markers t))
 
 
-  (defun my/org-mode ()
-    (my/org-mode-keyboard-shortcuts)
-   ;; (my/org-variable-pitch)
-    )
+    (defun my/org-mode ()
+      (my/org-mode-keyboard-shortcuts)
+     ;; (my/org-variable-pitch)
+      )
 
-  (defun my/org-agenda-mode ()
-    (my/org-agenda-keyboard-shortcuts))
+    (defun my/org-agenda-mode ()
+      (my/org-agenda-keyboard-shortcuts))
 
-  (setq-default fill-column 85)
+    (setq-default fill-column 85)
 
 #+END_SRC
 
